[package]
name = "rutie"
version = "0.9.0"
authors = [
  "Steve Klabnik <steve@steveklabnik.com>",
  "Dmitry Gritsay <unseductable@gmail.com>",
  "Daniel P. Clark <6ftdan@gmail.com>"
]
edition = "2021"
description = "The tie between Ruby and Rust."
repository = "https://github.com/danielpclark/rutie"
readme = "README.md"
keywords = ["cruby", "ruby", "rutie"]
license = "MIT"
build = "build.rs"

[features]
embed = ["rb-sys/link-ruby"]
ruby-static = ["rb-sys/ruby-static"]
no-link = [] # noop, for backwards compatibility.

[dependencies]
libc = "0.2.151"
lazy_static = "1.4.0"
rb-sys = { version = "0.9.77" }

[dev-dependencies]
rutie = { path = ".", features = ["embed"] }

[build-dependencies]
rb-sys-env = "0.1"

[badges]
travis-ci = { repository = "danielpclark/rutie", branch = "master" }
maintenance = { status = "actively-developed" }
