[package]
name = "rutie"
version = "0.9.0"
authors = [
  "Steve Klabnik <steve@steveklabnik.com>",
  "Dmitry Gritsay <unseductable@gmail.com>",
  "Daniel P. Clark <6ftdan@gmail.com>",
]
edition = "2021"
description = "The tie between Ruby and Rust."
repository = "https://github.com/danielpclark/rutie"
readme = "README.md"
keywords = ["cruby", "ruby", "rutie"]
license = "MIT"
build = "build.rs"

[features]
embed = ["rb-sys/link-ruby"]
ruby-static = ["rb-sys/ruby-static"]
no-link = []                         # noop, for backwards compatibility.

[dependencies]
libc = "0.2.121"
rb-sys = { git = "https://github.com/oxidize-rb/rb-sys.git", features = [
  "stable-api",
] }

[dev-dependencies]
rutie = { path = ".", features = ["embed"] }
rb-sys-env = { version = "0.1" }
rb-sys-test-helpers = { git = "https://github.com/oxidize-rb/rb-sys.git" }
lazy_static = "1.4.0"

[build-dependencies]
rb-sys-env = "0.1"

[badges]
travis-ci = { repository = "danielpclark/rutie", branch = "master" }
maintenance = { status = "actively-developed" }
