[package]
name = "rutie"
version = "0.10.0"
authors = [
  "Steve Klabnik <steve@steveklabnik.com>",
  "Dmitry Gritsay <unseductable@gmail.com>",
  "Daniel P. Clark <6ftdan@gmail.com>",
  "Jose Narvaez <goyox86@gmail.com>",
]
edition = "2021"
description = "The tie between Ruby and Rust."
repository = "https://github.com/danielpclark/rutie"
readme = "README.md"
keywords = ["cruby", "ruby", "rutie"]
license = "MIT"
build = "build.rs"

[features]
link-ruby = ["rb-sys/link-ruby"]
ruby-static = ["rb-sys/ruby-static"]
no-link = []                         # noop, for backwards compatibility.

[dependencies]
libc = "0.2.169"
rb-sys = { version = "0.9.110", features = ["stable-api-compiled-fallback"] }
rb-sys-env = "0.2.2"

[dev-dependencies]
rutie = { path = ".", features = ["link-ruby"] }
lazy_static = "1.4.0"
rb-sys-test-helpers = "0.2.0"

[build-dependencies]
rb-sys-env = "0.1"

[badges]
travis-ci = { repository = "danielpclark/rutie", branch = "master" }
maintenance = { status = "actively-developed" }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(ruby_gte_3_0)', 'cfg(ruby_lte_3_1)'] }
